--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.4",
+    "@tabler/icons": "^1.41.2",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
