--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@heroicons/react": "^1.0.4",
     "@tabler/icons": "^1.41.2",
     "next": "^11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.18",
+    "@types/react": "^17.0.20",
     "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
